--- a/packages/design-docs/src/components/itp-rcc-collapse/withHintTextCollapse/styles.css
+++ b/packages/design-docs/src/components/itp-rcc-collapse/withHintTextCollapse/styles.css
@@ -1,7 +1,9 @@
+/* @import '../../../themes/baseTheme.css'; */
+
 .collapse-styled {
   font-family: sans-serif;
   line-height: 1.44;
-  color: #55626f;
+  color: var(--color);
 }
 
 .collapse-styled .collapse-header {
@@ -9,7 +11,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 10px;
-  border-bottom: 1px solid #dbe1e6;
+  border-bottom: 1px solid var(--mainColor);
 }
 
 .collapse-styled .collapse-controls {
@@ -24,7 +26,7 @@
   width: 24px;
   height: 24px;
   margin-left: 8px;
-  background-color: #dbe1e6;
+  background-color: var(--mainColor);
   border-radius: 24px;
 }
 
@@ -35,21 +37,21 @@
 .collapse-styled > .rc-collapse-item > .rc-collapse-header:focus {
   border-radius: 2px;
   outline: none;
-  box-shadow: 0 0 0 1px #dbe1e6;
+  box-shadow: 0 0 0 1px var(--mainColor);
 }
 
 .collapse-styled .collapse-icon-container svg {
   transition: transform 150ms ease;
   transform: rotate(360deg);
-  fill: #909ca6;
+  fill: var(--darkColor);
 }
 
 .collapse-styled .rc-collapse-item-active .collapse-icon-container {
-  background-color: #ffdfab;
+  background-color: var(--focusLight);
 }
 
 .collapse-styled .rc-collapse-item-active .collapse-icon-container svg {
   transition: transform 150ms ease;
   transform: rotate(180deg);
-  fill: #f78c08;
+  fill: var(--focusDark);
 }
