removed button styling from package, added different types of buttons as example

--- a/packages/design-docs/public/index.css
+++ b/packages/design-docs/public/index.css
@@ -5,3 +5,13 @@
 .catalog-14mvqx7-Html-Html {
   height: auto;
 }
+
+.ant-btn,
+.ant-btn-group {
+  margin-right: 8px;
+  margin-bottom: 12px;
+}
+
+.ant-btn-group > .ant-btn {
+  margin-right: 0;
+}
