--- a/packages/create-itp-react-app/templates/src/common/components/molecules/Header.css
+++ b/packages/create-itp-react-app/templates/src/common/components/molecules/Header.css
@@ -1,7 +1,7 @@
 .header {
-  background-color: var(--tertiaryColor);
-  border-bottom: 5px solid var(--primaryColor);
-  color: var(--secondaryColor);
+  background-color: var(--colorTertiary900);
+  border-bottom: 5px solid var(--colorPrimary900);
+  color: var(--colorSecondary900);
   padding: 50px;
   text-align: center;
 }
