--- a/packages/create-itp-react-app/templates/src/common/components/molecules/Header.css
+++ b/packages/create-itp-react-app/templates/src/common/components/molecules/Header.css
@@ -1,6 +1,6 @@
 .header {
-  background-color: var(--colorTertiary900);
-  border-bottom: 5px solid var(--colorPrimary900);
+  background-color: var(--colorPrimary900);
+  border-bottom: 5px solid var(--colorTertiary900);
   color: var(--colorSecondary900);
   padding: 50px;
   text-align: center;
