add button to create-itp-react-app

--- a/packages/create-itp-react-app/templates/app/src/App.css
+++ b/packages/create-itp-react-app/templates/app/src/App.css
@@ -1,6 +1,9 @@
 body {
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
 
-.app {
+.content {
+  display: flex;
+  justify-content: center;
+  padding: 1em 0;
 }
