--- a/packages/create-itp-react-app/templates/app/src/common/components/atoms/Title/Title.module.css
+++ b/packages/create-itp-react-app/templates/app/src/common/components/atoms/Title/Title.module.css
@@ -1,5 +1,8 @@
+@import "../../../../hubble/variables.css";
+
 .Title {
   font-family: "Flama Semicondensed", sans-serif;
   font-size: 4.5vw;
-  font-weight: 400;
+  line-height: var(--lineHeightFontHeader1);
+  font-weight: var(--weightFontHeader1);
 }
