--- a/packages/create-itp-react-app/templates/app/src/common/components/molecules/Header/Header.module.css
+++ b/packages/create-itp-react-app/templates/app/src/common/components/molecules/Header/Header.module.css
@@ -1,10 +1,11 @@
+@import "../../../../hubble/variables.css";
 @import '@inthepocket/itp-css/properties/breakpoints.css';
 
 .header {
   position: relative;
   z-index: 1;
   padding: 10% 0 0 0;
-  color: var(--colorSecondary900);
+  color: var(--colorBaseSecondary900);
 }
 
 @media (--bp3) {
